# evai-bot

./: .gitignore  README.md  data.db  lefthook.yml  pyproject.toml
src/evai_bot/: admin.py  bot.py  config.py  db.py  main.py  models.py  vtuber_client.py
src/evai_bot/surveys/: engine.py  schema.py
src/evai_bot/surveys/data/: blue_red.json  dance_winner.json  pledge.json  registration.json  superpower.json  two_stools.json
src/olv_telegram_bot/: admin.py  bot.py  config.py  db.py  main.py  models.py  vtuber_client.py
src/olv_telegram_bot/surveys/: engine.py  schema.py
src/olv_telegram_bot/surveys/data/: registration.json
